# docs/swagger.yaml
@@ -1,26 +1,82 @@
 info:
   contact: {}
 paths:
-  /login:
+  /admin/category-create:
     post:
       parameters:
-      - description: username
-        in: formData
-        name: username
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
         type: string
-      - description: password
+      - description: name
         in: formData
-        name: password
+        name: name
+        required: true
+        type: string
+      - description: parent_id
+        in: formData
+        name: parent_id
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","msg":""}'
+          schema:
+            type: string
+      summary: 分类创建
+      tags:
+      - 私有方法
+  /admin/category-delete:
+    delete:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: query
+        name: identity
+        required: true
         type: string
       responses:
         "200":
           description: '{"code":"200","msg":""}'
           schema:
             type: string
-      summary: 用户登录
+      summary: 分类删除
       tags:
-      - 公共方法
-  /problem-create:
+      - 私有方法
+  /admin/category-modify:
+    put:
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: identity
+        in: query
+        name: identity
+        required: true
+        type: string
+      - description: name
+        in: formData
+        name: name
+        type: string
+      - description: parent_id
+        in: formData
+        name: parent_id
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","msg":""}'
+          schema:
+            type: string
+      summary: 分类修改
+      tags:
+      - 私有方法
+  /admin/problem-create:
     post:
       parameters:
       - description: authorization
@@ -63,6 +119,48 @@ paths:
       summary: 问题创建
       tags:
       - 私有方法
+  /category-list:
+    get:
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      - description: keyword
+        in: query
+        name: keyword
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","msg":""}'
+          schema:
+            type: string
+      summary: 分类列表
+      tags:
+      - 公共方法
+  /login:
+    post:
+      parameters:
+      - description: username
+        in: formData
+        name: username
+        type: string
+      - description: password
+        in: formData
+        name: password
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","msg":""}'
+          schema:
+            type: string
+      summary: 用户登录
+      tags:
+      - 公共方法
   /problem-detail:
     get:
       parameters:
