# service/problem.go
@@ -2,7 +2,9 @@ package service
 
 import (
 	"GOOJ/define"
+	"GOOJ/helper"
 	"GOOJ/models"
+	"encoding/json"
 	"gorm.io/gorm"
 	"log"
 	"net/http"
@@ -86,5 +88,105 @@ func GetProblemDetail(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"code": 200,
 		"data": data,
+	})
+}
+
+// ProblemCreate
+// @Tags 私有方法
+// @Summary 问题创建
+// @Param authorization header string true "authorization"
+// @Param title formData string true "title"
+// @Param content formData string true "content"
+// @Param max_runtime formData string false "max_runtime"
+// @Param max_memory formData string false "max_memory"
+// @Param category_ids formData array false "category_ids"
+// @Param test_cases formData array true "test_cases"
+// @Success 200 {string} json "{"code":"200","msg":""}"
+// @Router /admin/problem-create [post]
+func ProblemCreate(c *gin.Context) {
+	title := c.PostForm("title")
+	content := c.PostForm("content")
+	maxRuntime, _ := strconv.Atoi(c.PostForm("max_runtime"))
+	maxMemory, _ := strconv.Atoi(c.PostForm("max_memory"))
+	categoryIds := c.PostFormArray("category_ids")
+	testCases := c.PostFormArray("test_cases")
+
+	// check params
+	if title == "" || content == "" || len(testCases) == 0 {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "params is empty",
+		})
+		return
+	}
+
+	data := &models.ProblemBasic{
+		Identity:   helper.GetUUID(),
+		Title:      title,
+		Content:    content,
+		MaxRuntime: maxRuntime,
+		MaxMemory:  maxMemory,
+	}
+
+	problemCategories := make([]*models.ProblemCategory, 0)
+	for _, id := range categoryIds {
+		categoryId, _ := strconv.Atoi(id)
+		problemCategories = append(problemCategories, &models.ProblemCategory{
+			ProblemId:  data.ID,
+			CategoryId: uint(categoryId),
+		})
+	}
+	data.ProblemCategory = problemCategories
+
+	// {"input":"1 2\n", "output":"3\n"}
+	testCaseBasics := make([]*models.TestCase, 0)
+	for _, testCase := range testCases {
+		caseMap := make(map[string]string)
+		err := json.Unmarshal([]byte(testCase), &caseMap)
+		if err != nil {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "test case error: " + err.Error(),
+			})
+			return
+		}
+		if _, ok := caseMap["input"]; !ok {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "test case input is empty",
+			})
+			return
+		}
+		if _, ok := caseMap["output"]; !ok {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "test case output is empty",
+			})
+			return
+		}
+		testCaseBasic := &models.TestCase{
+			Identity:        helper.GetUUID(),
+			ProblemIdentity: data.Identity,
+			Input:           caseMap["input"],
+			Output:          caseMap["output"],
+		}
+		testCaseBasics = append(testCaseBasics, testCaseBasic)
+	}
+	data.TestCases = testCaseBasics
+
+	// create problem
+	err := models.DB.Create(&data).Error
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "create problem error: " + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"identity": data.Identity,
+		},
 	})
 }
